fixed Lead trigger test to use insert not update

--- a/force-app/main/default/classes/SummitEventsLetterheadLookupExtension.cls
+++ b/force-app/main/default/classes/SummitEventsLetterheadLookupExtension.cls
@@ -80,10 +80,11 @@ public with sharing class SummitEventsLetterheadLookupExtension {
         Matcher matcher2 = TAG_REGEX2.matcher(LHTemplate);
         Integer matchCounter = 0;
         while (matcher2.find() == true) {
+            String imgUrl = 'https://' + Url.getCurrentRequestUrl().getHost();
             if (matchCounter == 0) {
-                headerImg = '<img src="' + Url.getCurrentRequestUrl().getHost() + matcher2.group(1) + '"/>';
+                headerImg = '<img src="https://' + imgUrl + matcher2.group(1) + '"/>';
             } else if (matchCounter == 1) {
-                footerImg = '<img src="' + Url.getCurrentRequestUrl().getHost() + matcher2.group(1) + '"/>';
+                footerImg = '<img src="https://' + imgUrl + matcher2.group(1) + '"/>';
             }
             matchCounter++;
         }
