added text field for birthdate and converted birthdate in reg class to text

--- a/force-app/main/default/classes/SummitEventsRegisterController.cls
+++ b/force-app/main/default/classes/SummitEventsRegisterController.cls
@@ -370,7 +370,7 @@ public with sharing class SummitEventsRegisterController {
                         Registrant_Other_Phone__c, Registrant_Other_Relationship__c, Registrant_Country__c, Registrant_State_Province__c, Registrant_Postal_Code__c, Registrant_Third_Party_Status__c,
                         Registrant_Pronouns__c, Registrant_Title__c, Registrant_Company_Organization__c, Event_Website__c, Event_Website_Referrer__c, gclid__c, utm_campaign__c, utm_content__c,
                         utm_creative_format__c, utm_id__c, utm_marketing_tactic__c, utm_medium__c, utm_source__c, utm_source_platform__c, utm_term__c, Dietary_Ristrictions__c,
-                        Accessibility_Need__c, Accessibility_Need_Detail__c, reCAPTCHA_Score__c
+                        Accessibility_Need__c, Accessibility_Need_Detail__c, reCAPTCHA_Score__c, Registrant_Date_of_Birth_Text__c
                 FROM Summit_Events_Registration__c
                 WHERE Id = :eventRegistrationId
                 WITH SECURITY_ENFORCED
@@ -474,9 +474,9 @@ public with sharing class SummitEventsRegisterController {
             // Use Google reCAPTCHA v3 to get a score and validate against acceptable score in settings
             Decimal reCAPTCHAScore = 0;
             reCAPTCHAScore = summitEventsRecaptcha.isReCAPTCHAValid(recaptchaResponse);
-            if (RECAPTCHAScore < seaCustomSettings.reCAPTCHA_v3_Score__c) {
+            if (reCAPTCHAScore < seaCustomSettings.reCAPTCHA_v3_Score__c) {
                 ApexPages.Message myMsg = new ApexPages.Message(ApexPages.Severity.ERROR, eventPage.reCAPTCHA_v3_Score_Fail_Text__c);
-                if (RECAPTCHAScore == -1) {
+                if (reCAPTCHAScore == -1) {
                     myMsg = new ApexPages.Message(ApexPages.Severity.ERROR, 'reCaptcha v3 Unauthorized endpoint, please add reCaptcha endpoint to Setup->Security->Remote site settings.');
                 }
                 ApexPages.addMessage(myMsg);
@@ -508,6 +508,12 @@ public with sharing class SummitEventsRegisterController {
 
         if (String.isNotBlank(birthDateString)) {
             eventRegistration.Registrant_Date_of_Birth__c = Date.parse(birthDateString);
+        }
+
+        if(eventRegistration.Registrant_Date_of_Birth__c != null){
+            Datetime birthDateTime = Datetime.newInstance(eventRegistration.Registrant_Date_of_Birth__c, Time.newInstance(0, 0, 0, 0));
+            String formattedBirthDateString = birthDateTime.format('yyyy-MM-dd');
+            eventRegistration.Registrant_Date_of_Birth_Text__c = formattedBirthDateString;
         }
 
         if (String.isNotBlank(applicantType)) {
