Appointmentn Type Limits & Test Class

--- a/force-app/main/default/classes/SummitEventsRegisterAppointmentCtlr.cls
+++ b/force-app/main/default/classes/SummitEventsRegisterAppointmentCtlr.cls
@@ -89,7 +89,7 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
                             ORDER BY Sort_Order__c ASC NULLS LAST
                     ]);
 
-                    removeAppointmentsWithExceedingRegistrationLimit(appointments);
+                    removeAppointmentsWithExceedingRegistrationLimit(appointments, evtInstance);
                     
                     formattedNavDate = SummitEventsShared.navBreadcrumbBuilder(evtInstance);
 
@@ -269,11 +269,24 @@ public with sharing class SummitEventsRegisterAppointmentCtlr {
         return pageFlow.get('Previous');
     }
 
-    private static void removeAppointmentsWithExceedingRegistrationLimit(Map<Id, Summit_Events_Appointment_Type__c> appointments){
+    private static void removeAppointmentsWithExceedingRegistrationLimit(Map<Id, Summit_Events_Appointment_Type__c> appointments, Summit_Events_Instance__c evtInstance){
+        AggregateResult[] eventAppointmentCounts = [
+            SELECT Count(Id) aCount, Event_Registration__r.Event_Instance__c, Event_Appointment_Type__c
+            FROM Summit_Events_Appointments__c
+            WHERE Event_Appointment_Type__r.Enforce_Registrations_Limit__c = TRUE
+            AND Event_Registration__r.Event_Instance__c =: evtInstance.Id
+            Group by Event_Registration__r.Event_Instance__c, Event_Appointment_Type__c
+        ];
+
+        Map<Id, Integer> appointmentTypeIdMapToCount = new Map<Id, Integer>();
+        for (AggregateResult ar : eventAppointmentCounts) {
+            appointmentTypeIdMapToCount.put((Id) ar.get('Event_Appointment_Type__c'), (Integer) ar.get('aCount'));
+        }
+
         List<Id> unavailableAppointments = new List<Id>();
         for(Summit_Events_Appointment_Type__c apt : appointments.values()){
-            if(apt.Enforce_Registrations_Limit__c){
-                if( apt.UG_Visit_Appointments__r.size() >= apt.Appointment_Registrations_Limit__c){
+            if(apt.Enforce_Registrations_Limit__c && appointmentTypeIdMapToCount.containsKey(apt.Id)){
+                if(appointmentTypeIdMapToCount.get(apt.Id) >= apt.Appointment_Registrations_Limit__c){
                     unavailableAppointments.add(apt.Id);
                 }
             }
